/* [START declaration] */
syntax = "proto3";
package vmware.blockchain.deployment.v1;

import "vmware/blockchain/deployment/v1/core.proto";
import "vmware/blockchain/deployment/v1/concord_model.proto";
import "vmware/blockchain/deployment/v1/security_identity.proto";
import "vmware/blockchain/ethereum/type/genesis.proto";

option go_package = "vmware.com/blockchain/deployment/v1;deployment";

/* [START java_declaration] */
option java_package = "com.vmware.blockchain.deployment.v1";
option java_multiple_files = true;
/* [END java_declaration] */

/* [START messages] */


/**
* Denotes the configuration component
*
* @param[type]
*  Type of the docker component
* @param[component_url]
*   String url where the component should reside
* @param[component]
*   String value of the component
* @param [identity_factors]
*   Algorithms and curves used if used
*   Note: this is only for testing purpose. In future, this could
*   be an input to generator to generate certain type of certs (RSA/EC)
*/
message ConfigurationComponent {
    ConcordComponent.ServiceType type = 1;
    string component_url = 2;
    string component = 3;
    IdentityFactors identity_factors = 4;
}

/**
 * Model definition for ConfigurationService request.
 *
 * @property[header]
 *   message header.
 * @property[hostIps]
 *   list of host ips for the cluster
 */
message ConfigurationServiceRequest {
    MessageHeader header = 1;
    repeated string hosts = 2;
    ConcordModelSpecification.BlockchainType blockchain_type = 3;
    vmware.blockchain.ethereum.type.Genesis genesis = 4;
    repeated ConcordComponent.ServiceType services = 5;
}

/**
 * Model definition for DeleteConfiguration request.
 *
 * @property[header]
 *   message header.
 * @property[id]
 *   ConfigurationSessionIdentifier to be deleted
 */
message DeleteConfigurationRequest {
    MessageHeader header = 1;
    ConfigurationSessionIdentifier id = 2;
}


/**
 * Model definition for metadata server configuration settings.
 *
 * @property[port]
 *   port number to use for server instance.
 * @property[transport_security]
 *   transport security setting.
 */
message ConfigurationServerConfiguration {
    int32 port = 1;
    TransportSecurity transport_security = 2;
}

/**
 * Denote the identifier of a configuration session.
 *
 * @property[identifier]
 *   integer identifier;
 */
message ConfigurationSessionIdentifier {
    int64 identifier = 1;
}

/**
* Denote the node configuration response
*
* @property[IdentityComponent]
*   list of IdentityComponent
*/
message NodeConfigurationResponse {
    repeated ConfigurationComponent configuration_component = 1;
}

/**
* Denote the node configuration request
*
* @property[identifier]
*   the session identifier
* @property[node]
*   the node id whose configuration is needed
*/
message NodeConfigurationRequest {
    MessageHeader header = 1;
    ConfigurationSessionIdentifier identifier = 2;
    int32 node = 3;
}

/**
* Denotes a delete configuration response.
* This is subject to modification later
*
* @property[MessageHeader]
*   message header containing any information needed
*/
message DeleteConfigurationResponse {
    MessageHeader header = 1;
}

/* [END messages] */
/* [START services] */
/**
 * Service definition pertaining to operations on Concord configurations.
 */
service ConfigurationService {
    /**
     * Operation to generate Tls key/certificate pairs for each node in a cluster
     * based on a [TlsConfigurationServiceRequest].
     */
    rpc CreateConfiguration (ConfigurationServiceRequest) returns (ConfigurationSessionIdentifier);

    /**
    * Operation to get node configuration for given node
    */
    rpc GetNodeConfiguration (NodeConfigurationRequest) returns (NodeConfigurationResponse);

    /**
    * Operation to delete configuration for given identifier
    */
    rpc DeleteConfiguration (DeleteConfigurationRequest) returns (DeleteConfigurationResponse);
}
/* [END services] */